P2-Planning-for-High-Availability-and-Incident-Response-master/project/starter-code/zone1/modules/rds-p/rds.tf
# resource "aws_db_instance" "default" {
#   allocated_storage    = 10
#   engine               = "mysql"
#   engine_version       = "5.7"
#   instance_class       = "db.t3.micro"
#   username             = "udacity"
#   password             = "MyUdacityPassword"
#   parameter_group_name = "default.mysql5.7"
#   multi-az             = true
#   skip_final_snapshot  = true
# }


resource "aws_rds_cluster_parameter_group" "cluster_pg" {
  name   = "udacity-pg-p"
  family = "aurora-mysql5.7"

  parameter {
    name         = "binlog_format"
    value        = "MIXED"
    apply_method = "pending-reboot"
  }

  parameter {
    name         = "log_bin_trust_function_creators"
    value        = 1
    apply_method = "pending-reboot"
  }
}

resource "aws_db_subnet_group" "udacity_db_subnet_group" {
  name       = "udacity_db_subnet_group"
  subnet_ids = var.private_subnet_ids

}
resource "aws_rds_cluster" "udacity_cluster" {
  allow_major_version_upgrade     = true
  apply_immediately               = true
  cluster_identifier              = "udacity-db-cluster"
  availability_zones              = ["us-east-2a", "us-east-2b"]
  db_cluster_parameter_group_name = aws_rds_cluster_parameter_group.cluster_pg.name
  database_name                   = "udacityc2"
  master_username                 = "udacity"
  master_password                 = "MyUdacityPassword"
  vpc_security_group_ids          = [aws_security_group.db_sg_1.id]
  db_subnet_group_name            = aws_db_subnet_group.udacity_db_subnet_group.name
  engine_mode                     = "provisioned"
  engine                          = "aurora-mysql"
  engine_version                  = "5.7.mysql_aurora.2.11.2"
  skip_final_snapshot             = true
  storage_encrypted               = false
  backup_retention_period         = 5
  depends_on                      = [aws_rds_cluster_parameter_group.cluster_pg]
}

output "db_cluster_arn" {
  value = aws_rds_cluster.udacity_cluster.arn
}

output "db_instance_arn" {
  value = aws_rds_cluster_instance.udacity_instance[0].arn
}

resource "aws_rds_cluster_instance" "udacity_instance" {
  count                = var.rds_instance_count
  identifier           = "udacity-db-instance-${count.index}"
  cluster_identifier   = aws_rds_cluster.udacity_cluster.id
  instance_class       = "db.t2.small"
  engine               = "aurora-mysql"
  engine_version       = "5.7.mysql_aurora.2.11.2"
  db_subnet_group_name = aws_db_subnet_group.udacity_db_subnet_group.name
}

resource "aws_security_group" "db_sg_1" {
  name   = "udacity-db-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 3306
    protocol    = "TCP"
    to_port     = 3306
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 3306
    protocol    = "TCP"
    to_port     = 3306
    cidr_blocks = ["0.0.0.0/0"]
  }
}
